--- a/bin/LoginScene.fxml
+++ b/bin/LoginScene.fxml
@@ -11,7 +11,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="370.0" prefWidth="590.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.LoginControl">
    <children>
-      <Button fx:id="loginB" layoutX="270.0" layoutY="223.0" mnemonicParsing="false" text="Login" />
+      <Button fx:id="loginB" layoutX="270.0" layoutY="223.0" mnemonicParsing="false" onMouseClicked="#login" text="Login" />
       <Hyperlink fx:id="registerLink" layoutX="337.0" layoutY="219.0" onMouseClicked="#registering" text="Register">
          <font>
             <Font size="8.0" />
